# smile

./: .gitattributes  .gitignore  .luarc.json  CMakeLists.txt  LICENSE  README.md  TODO.md  third_party_licenses.txt  win.rc  winres.h
assets/shaders/: basic.frag  quad.vert  quad_texture.frag  quad_texture.vert  rounded.frag  rounded.vert  text.frag  text.vert
definitions/: window.meta.lua
extensions/test/: main.lua  meta.json  pen.lua  rect.lua  select.lua
meta/: app.meta.lua  color4.meta.lua  context_action.meta.lua  document.meta.lua  editor.meta.lua  extension.meta.lua  menu_action.meta.lua  rect.meta.lua  renderer.meta.lua  theme.meta.lua  tool.meta.lua  ui_types.meta.lua  vector2.meta.lua  window.meta.lua  window_event.meta.lua  window_input.meta.lua
scripts/: main.lua
src/: bindings.cpp  main.cpp
src/app/: app.cpp  app.hpp
src/core/: app.cpp  app.hpp  document.hpp  document_manager.hpp  editor.cpp  editor.hpp  object.cpp  object.hpp  signal.hpp  viewport_manager.cpp  viewport_manager.hpp
src/datatypes/: color4.cpp  color4.hpp  rect.hpp  ui_types.cpp  ui_types.hpp  vector2.cpp  vector2.hpp
src/datatypes/object/: edge.hpp  face.hpp  line.hpp  point.hpp  shape.hpp  triangle.hpp  vertex.hpp
src/document/: canvas.hpp  document.cpp  document.hpp  document_manager.cpp  document_manager.hpp  instance.hpp  object.cpp  object.hpp
src/extension/: context_action.cpp  context_action.hpp  extension.cpp  extension.hpp  extension_manager.cpp  extension_manager.hpp  extension_registry.cpp  extension_registry.hpp  menu_action.cpp  menu_action.hpp  tool.cpp  tool.hpp
src/render/: font_manager.cpp  font_manager.hpp  renderer.cpp  renderer.hpp  renderer_gl.cpp  renderer_gl.hpp  renderer_impl.cpp  renderer_impl.hpp  renderer_types.hpp  shader_manager.cpp  shader_manager.hpp
src/type/: color4.cpp  color4.hpp  line.hpp  numbers.cppm  numbers.hpp  point.hpp  primitives.hpp  rect.hpp  shape.hpp  ui_types.hpp  vector2.cpp  vector2.hpp
src/ui/: theme.cpp  theme.hpp  ui_tools.cpp  ui_tools.hpp
src/ui/widgets/: button.cpp  button.hpp  container_widget.cpp  container_widget.hpp  widget.hpp
src/ui/widgets/console/: console.cpp  console.hpp  console_display.cpp  console_display.hpp
src/ui/widgets/panels/: panel.hpp  panel_container.cpp  panel_container.hpp  panel_leaf.cpp  panel_leaf.hpp  panel_split.cpp  panel_split.hpp
src/ui/widgets/tab/: tab.cpp  tab.hpp  tab_bar.cpp  tab_bar.hpp
src/ui/widgets/tool/: category_tool_bar.cpp  category_tool_bar.hpp  tool_bar.cpp  tool_bar.hpp
src/ui/widgets/viewport/: viewport.cpp  viewport.hpp
src/util/: console.hpp  logger.hpp
src/window/: main_window.cpp  main_window.hpp  window.cpp  window.hpp  window_impl.cpp  window_impl.hpp  window_input.hpp  window_manager.cpp  window_manager.hpp  window_win32.cpp  window_win32.hpp
